@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -37,6 +37,9 @@ public:
     virtual ~CPlayerCaptureBar();
 
     BOOL Create(CWnd* pParentWnd, UINT defDockBarID);
+
+    virtual void ReloadTranslatableResources();
+
     void InitControls();
 
 protected:
