@@ -1,6 +1,6 @@
 /*
  * (C) 2003-2006 Gabest
- * (C) 2006-2013 see Authors.txt
+ * (C) 2006-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -352,7 +352,7 @@ typedef CAtlArray<Codec> CCodecArray;
 
 // CPlayerCaptureDialog dialog
 
-class CPlayerCaptureDialog : public CResizableDialog //CDialog
+class CPlayerCaptureDialog : public CResizableDialog
 {
     //DECLARE_DYNAMIC(CPlayerCaptureDialog)
 
@@ -466,6 +466,10 @@ public:
     int GetVideoInput();
     int GetVideoChannel();
     int GetAudioInput();
+
+    bool IsInitialized() const {
+        return m_bInitialized;
+    };
 
 protected:
     virtual void DoDataExchange(CDataExchange* pDX);    // DDX/DDV support
