@@ -1,5 +1,5 @@
 /*
- * (C) 2010-2013 see Authors.txt
+ * (C) 2010-2014 see Authors.txt
  *
  * This file is part of MPC-HC.
  *
@@ -36,6 +36,7 @@ public:
     CPlayerNavigationBar(CMainFrame* pMainFrame);
     virtual ~CPlayerNavigationBar();
     BOOL Create(CWnd* pParentWnd, UINT defDockBarID);
+    virtual void ReloadTranslatableResources();
 
 public:
     CPlayerNavigationDialog m_navdlg;
