@@ -17,6 +17,7 @@ next version - not released yet
     - Ticket #3575, LAV Splitter: Alternate audio support for HLS
     - LAV Video: Support VP7 video
     - LAV Video: Use the MediaFondation WMV decoder on Windows 7+ instead of the DMO WMV decoder
+! The dockable bars were not updated when changing the UI language
 ! Ticket #34, VSFilter/ISR: Override placement feature was not working even if enabled
 ! Ticket #1411, Internal Subtitle Renderer/VSFilter: Support loading external PGS subtitles
 ! Ticket #1574/#4171, ISR: Subtitle positioning was wrong when using default style override
